[gd_scene load_steps=18 format=2]

[ext_resource path="res://Textures/FlyingEnemy.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/FlyingGorilla.gd" type="Script" id=2]
[ext_resource path="res://Textures/HealthBar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.239, 31.7845 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1066.5, 618.266 ), Vector2( 847.109, 711.58 ), Vector2( 622.016, 603.307 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/RightWing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/LeftWing:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head/RightWing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LeftWing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1241.96, 829.936 )

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "attack"

[sub_resource type="AnimationNodeTimeScale" id=6]

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( 0, 103.317 )
nodes/TimeScale/node = SubResource( 6 )
nodes/TimeScale/position = Vector2( 290, 150 )
nodes/idle/node = SubResource( 7 )
nodes/idle/position = Vector2( 40, 140 )
nodes/output/position = Vector2( 500, 150 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "idle" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id=11]
states/attack/node = SubResource( 5 )
states/attack/position = Vector2( 199, 68.75 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 399.5, 68.5 )
transitions = [ "attack", "idle", SubResource( 9 ), "idle", "attack", SubResource( 10 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1, 8 )
modulate_color = Color( 0.411765, 1, 0, 1 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1, 8 )
modulate_color = Color( 0, 0, 0, 1 )

[node name="FlyingBOI" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Head" type="Sprite" parent="."]
scale = Vector2( 0.12, 0.127 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -15.3007, 141.266, 473.282, 434.588 )

[node name="RightWing" type="Sprite" parent="Head"]
position = Vector2( 267.878, -49.5723 )
texture = ExtResource( 1 )
offset = Vector2( 104.787, -96.2026 )
region_enabled = true
region_rect = Rect2( 503.85, -0.510185, 331.506, 360.578 )

[node name="LeftWing" type="Sprite" parent="Head"]
position = Vector2( -251.998, -36.5483 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 120.638, -109.466 )
region_enabled = true
region_rect = Rect2( 503.85, -0.510185, 331.506, 360.578 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.998779, -7.59015 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 12 )
parameters/idle/TimeScale/scale = 2.0

[node name="PlayerHIT" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PlayerHIT"]
position = Vector2( 0.998779, -7.59015 )
shape = SubResource( 1 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -50.5011
margin_top = -46.7634
margin_right = 53.4989
margin_bottom = -41.7634
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
max_value = 60.0
value = 60.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="PlayerHIT" to="." method="_on_PlayerHIT_body_entered"]
